# sdkAutoTest

sdkAutoTest/: CMakeLists.txt  release_android.sh  release_ios.sh
sdkAutoTest/common/: VersionStamp.cc  VersionStamp.cc.in  VersionStamp.h
sdkAutoTest/iOS/sdkAutoTest/: autoTest.sh  sdkAutoTest.xcodeproj的替身
sdkAutoTest/iOS/sdkAutoTest/ci/: result.txt  runUnitTest.sh  targetCoverageResult.html
sdkAutoTest/iOS/sdkAutoTest/sdkAutoTest/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
sdkAutoTest/iOS/sdkAutoTest/sdkAutoTest.xcodeproj/: project.pbxproj
sdkAutoTest/iOS/sdkAutoTest/sdkAutoTest.xcodeproj/xcshareddata/xcschemes/: sdkAutoTest.xcscheme
sdkAutoTest/iOS/sdkAutoTest/sdkAutoTest/Include/: VersionStamp.h
sdkAutoTest/iOS/sdkAutoTest/sdkAutoTest/common/: VersionStamp.cc  VersionStamp.cc.in  VersionStamp.h
sdkAutoTest/iOS/sdkAutoTest/sdkAutoTests/: sdkAutoTests.mm
sdkAutoTest/iOS/sdkAutoTest/test-reports/: sys-reports
sdkAutoTest/iOS/sdkAutoTest/test-reports/sys-reports.xcresult/: Info.plist
sdkAutoTest/iOS/sdkAutoTest/test-reports/sys-reports.xcresult/Data/: data.0~2Mdd4L2MxxfWKfnayOALmiMAIFMsp4Qjt36bTra7ixpbmMzIE--JC6Tbq0_JViMtYftlEx219QOQqPhUmRXqZQ==  data.0~4GTGJH_y1_JNgi3ixIqLbuydeKV3O8Mg-JbOErlwgL2oponSoeMxFglRaC_wghP_7OQOjvXIIvXFTpijIx2N3g==  data.0~4gkn8jRgY5RZVnSFnW8sX2Wyr0yjoAbMpkevqYbYCJvRvlOxuxlqvCse1glEKU3wQxiwT3mMUS5EPgxdcLJTiQ==  data.0~5AQF5-zasjk8OfNzTrmZrM1j7J3VRZr7Lrgc00BHU0m9unfV0dw7sGAQp0xT6RT3S-pWxWc22O98UBDYGn5KEA==  data.0~5lM9Kgga70gwEXRqO2KJBqNql6kb3RHXahjl1GWFeHoxJ_wLVx9uPl3KwaeJizo14yIgUAuKdfdkBDQ7L2DUTw==  data.0~6BMd5P_QvJijvFmxEyfUCxG7oXhvjSpzPd30jrJZHiJibO9WVuV1qbV7AiuMkx5FW4JHgGn5BmdFwTqJNcyLzQ==  data.0~CUFVVm1O1dViFmEO4mqm9LZN6hQOt-FcQsGA4u2aEYyVrqitOF4m3LgawDEzmjcsCP-kb4pugqKMw3cf1vMGug==  data.0~DjSPQVIrMunwjdgFP60b3FvcdESKeUA4c-5397GlsxvpTI_XEyKo7XWwng8vgMew01dXICKs2S0X7U8L9Dmotg==  data.0~FXJYbyRiRvB50NamvmpZV-pE9WnTsJ5Cwp799RkzwTShGyodVLjGPIh9ff135x3cvr8LjnV36Y4wRNjyFFPBdA==  data.0~FjLlaj4C3GZJX5sCP5knPGTrXFLYb9e-KkuJI8CfQpRLZ58W59Sx82ccbLVb6EwGbcS2LIFq11-LlDQPZQhyJA==  data.0~Ge8Jc36PCks5eiXc6g7UVV9npK4hG3BbZ_Ez6JFWI01aRT3FlIRTN0uZac4CH4d0-CaRf-tSTyLeQI3RGK5Xdg==  data.0~Jl9-IgdAIdPO3zCakU_2VxNYMt37KiRGtqci1wQxU4bMbpU7Qn0WelNJXMeYFtHEnYbaDO5YgbVPikIQYGwWZg==  data.0~Kxhhp9YVEYvGEeDjtth3UN18SV19sSnXi0eBapdUxJIYBAhB2HtgJ-PesIKvxm6dgYt-7CUZeE9jsM8uQAEDRQ==  data.0~LmgB7ZZuCKeAV1r2GyGMPDqXZ6I3LVC4jNgh4EHOQgxxvKxD5mnlVyGkIcIFiNviETVmCMM6huZYuaXAthQfYQ==  data.0~NMLH2flO0Vt27qam7i3NmF64yz6HGz6-_8IHKRxaRRQN5yiPSLPNe-EMcVoJwFzKjJPF76Uw9VoiWrZXM6wHhg==  data.0~OHxuljADL_anVqoyE3v9sHz-vIQvVpyjPp1r0I6EBRE-GWh7dLu4TwfMeJRX7W0EZwz1F6OtWoxbRn154wI3cQ==  data.0~PQ8bjp2TBT3QURZZMHkXjcKNRJwovmqKJ5S30n1L6k9JhfuY0zrF6nVBUjhBS1Xo1z_GQA3b-6gW7KEnoiWfnA==  data.0~QFwhbTReE2XmLC82Fx-1c65Tsjp5ngIB9LO-T56nxIE7uYhuQcUWdXBYSRLCN3XiD92bMEcHkVffVnxSw2oFAA==  data.0~RNyD0ucSNe4aGZEcxAfRrSJ39UBCD4g3ELTMOtsUluiuzd2SJJDkTbJy1UenPEUW_oIRR2vSsl7A7sWdrPIaww==  (+48 more)
sdkAutoTest/release_android/x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
sdkAutoTest/release_ios/arm64/: CMakeCache.txt  Makefile  cmake_install.cmake
sdkAutoTest/release_ios/x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
(+3 files in other folders)
